- Fix overflow issues with diff-visualizer - Update angular-diff-match-patch module

--- a/src/main/webapp/static/app/styles/less/browser.less
+++ b/src/main/webapp/static/app/styles/less/browser.less
@@ -468,6 +468,11 @@ table.workspace-elements {
   background-color: #fdf6e3;
 }
 
+.visualizer-modal .diff pre {
+  height: 100%;
+  overflow: auto;
+}
+
 .file-select-modal-body {
   padding: 0;
 }
